objects/ortoo_qra__Action__c.object
<CustomObject>
    <fields>
        <fullName>ortoo_qra__Action_Type__c</fullName>
        <label>Action Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Assignment_Group__c</fullName>
        <label>Assignment Group</label>
        <referenceTo>ortoo_qra__Assignment_Group__c</referenceTo>
        <relationshipLabel>Actions</relationshipLabel>
        <relationshipName>Actions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Assignment_Type__c</fullName>
        <label>Assignment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Field_Value_to_Assign__c</fullName>
        <label>Field Value to Assign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Field_to_Update__c</fullName>
        <label>Field to Update</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Flow_Name__c</fullName>
        <label>Flow Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Flow_Parameter__c</fullName>
        <label>Flow Parameter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Match_Field__c</fullName>
        <label>Match Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Match_Pattern__c</fullName>
        <label>Match Pattern</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Object_to_Update__c</fullName>
        <label>Object to Update</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Off_Set__c</fullName>
        <label>Off Set</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Overwrite_non_blank_Values__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Overwrite non-blank Values</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Processing_Order__c</fullName>
        <label>Processing Order</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Stop_Processing_Further_Rules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stop Processing Further Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Trigger_On__c</fullName>
        <label>Trigger On</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Object Assigned</fullName>
                </value>
                <value>
                    <fullName>Object Not Assigned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ortoo_qra__Trigger_Type__c</fullName>
        <label>Trigger Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Pattern Matched</fullName>
                </value>
                <value>
                    <fullName>Pattern Not Matched</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Action</label>
    <nameField>
        <label>Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>